jenkins.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      securityContext:
        #runAsUser: 500
        supplementalGroups: [100]
      containers:
      - name: jenkins-master
        image: jenkins/jenkins:lts
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 50000
          name: jenkins
        volumeMounts:
          # name must match the volume name below
          - name: jenkins-nfs
            mountPath: "/var/jenkins_home"
      volumes:
      - name: jenkins-nfs
        persistentVolumeClaim:
          claimName: jenkins-nfs


#        volumeMounts:
#          - mountPath: /var/jenkins_home
#            name: jenkins-data
#      volumes:
#        - name: jenkins-data
#          hostPath:
#            path: /data/volumes/jenkins
#            type: DirectoryOrCreate
