elastic.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  ports:
  - port: 9200
    name: service
  - port: 9300
    name: cluster
  clusterIP: None
  selector:
    app: elasticsearch
---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: elasticsearch
spec:
  selector:
    matchLabels:
      app: elasticsearch # has to match .spec.template.metadata.labels
  serviceName: "elasticsearch"
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        app: elasticsearch # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.3.1
        ports:
        - containerPort: 9200
          name: service
        - containerPort: 9300
          name: cluster
        volumeMounts:
          - mountPath: /usr/share/elasticsearch/data
            name: elastic-data
      volumes:
        - name: elastic-data
          hostPath:
            path: /data/volumes/elasticsearch
            type: DirectoryOrCreate
